# cpp-cmake-project-template

./: .build_version  .clang-format  .gitignore  CMakeLists.txt  unseal_template.ps1  vcpkg.json
cmake/: cpm_env.cmake  project_setting.cmake  vcpkg_env.cmake
deps_party/global_utils/include/: global-register-error.hpp
source/: CMakeLists.txt  app.cpp
source/interface/: CMakeLists.txt  dynamic-module-loader.hpp
